JumpScript/tests/baselines/reference/parserErrorRecovery_ModuleElement1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.jump(2,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.jump(3,1): error TS7027: Unreachable code detected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.jump(4,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.jump (3 errors) ====
    return foo;
    }
    ~
!!! error TS1128: Declaration or statement expected.
    return bar;
    ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    ~
!!! error TS1128: Declaration or statement expected.